feat: np_max-act explainer

--- a/apps/webapp/app/blog/posts/interp-orgs-assemble.mdx
+++ b/apps/webapp/app/blog/posts/interp-orgs-assemble.mdx
@@ -29,7 +29,7 @@ imagePreview: ASSET_BASE_URL/blog/post-preview-min.jpg
 
 #### Background
 
-An awesome thing about Anthropic's recent circuits/biology release was that their research leads Jack Lindsey and Emmanuel Ameisen didn't just release a paper and move on - they followed up by [open sourcing the tools](https://www.anthropic.com/research/open-source-circuit-tracing) with Anthropic Fellows Michael Hanna and Mateusz Piotrowski, and also expended significant time helping other interpretability orgs (like us!) to understand and properly implement their work.
+An awesome thing about Anthropic's recent circuits/biology release was that they [open sourced the tools](https://www.anthropic.com/research/open-source-circuit-tracing) with Anthropic Fellows Michael Hanna and Mateusz Piotrowski, and also expended significant time helping other interpretability orgs (like us!) to understand and properly implement their work.
 
 #### The Perks of Collaboration
 
