update qwen graph to correct transcoders

--- a/apps/webapp/app/blog/posts/interp-orgs-assemble.mdx
+++ b/apps/webapp/app/blog/posts/interp-orgs-assemble.mdx
@@ -13,7 +13,7 @@ imagePreview: ASSET_BASE_URL/blog/post-preview-min.jpg
 
 - **The Circuit Analysis Research Landscape**: A collaborative post on circuit tracing and cross-layer transcoders (CLTs), including research extensions, perspectives, and future directions. Co-authored by Anthropic, Google DeepMind, Goodfire AI, EleutherAI, and Decode. [[Read the Post]](https://www.neuronpedia.org/graph/info) [[Tweets with GIFs]](https://x.com/neuronpedia/status/1952782534666010715) [[YouTube Tutorial]](https://www.youtube.com/playlist?list=PL05yUGfKO5wP6S5_12z7LG30LZigRYx1e) [[Open Source CLTs]](https://huggingface.co/collections/mntss/cross-layer-transcoders-688c39eaa8d5562e9c864055) [[circuit-tracer v0.2]](https://github.com/safety-research/circuit-tracer) [[clt-training GitHub]](https://github.com/EleutherAI/clt-training)
 
-- **New Graph Features**: Neuronpedia's circuit tracer interface now supports steering/interventions, Qwen3 4B graph generation, horizontally scrollable link graphs for long prompts, and other fixes. [[Circuit Tracer]](https://www.neuronpedia.org/graph) [[Qwen3 4B Graph]](https://www.neuronpedia.org/qwen3-4b/graph?slug=qwenname&pruningThreshold=0.73&densityThreshold=0.99)
+- **New Graph Features**: Neuronpedia's circuit tracer interface now supports steering/interventions, Qwen3 4B graph generation, horizontally scrollable link graphs for long prompts, and other fixes. [[Circuit Tracer]](https://www.neuronpedia.org/graph) [[Qwen3 4B Graph]](https://www.neuronpedia.org/qwen3-4b/graph?slug=qwen-name&pruningThreshold=0.73&densityThreshold=0.99)
 
 - **Fellowship with Neel Nanda (MATS)**: (All experience levels are welcome - many past scholars have had no past experience.) Learn and publish research under the supervision of Neel Nanda, lead of the mech interp team at Google DeepMind. This full-time fellowship comes with a stipend and provides other financial support including housing, transportation, etc. [[Application due August 29th]](https://tinyurl.com/neel-mats-app)
 
@@ -52,7 +52,7 @@ Significant code and artifacts from this post that you can use immediately:
 
 # Graph Updates: Steering, Qwen4 4B, UI for Long Prompts
 
-[[Circuit Tracer]](https://www.neuronpedia.org/graph) [[Qwen3-4B Graph]](https://www.neuronpedia.org/qwen3-4b/graph?slug=qwenname&pruningThreshold=0.73&densityThreshold=0.99) [[YouTube Steering Demo](https://youtu.be/hdi1a9MjwDs?feature=shared&t=3717)]
+[[Circuit Tracer]](https://www.neuronpedia.org/graph) [[Qwen3-4B Graph]](https://www.neuronpedia.org/qwen3-4b/graph?slug=qwen-name&pruningThreshold=0.73&densityThreshold=0.99) [[YouTube Steering Demo](https://youtu.be/hdi1a9MjwDs?feature=shared&t=3717)]
 
 #### Steering nodes and supernodes (groups of features)
 
@@ -108,7 +108,7 @@ The steps demonstrated in the above video:
 
 We're expanding beyond Gemma 2 2B, thanks to the availability of [Qwen3 4B transcoders](https://huggingface.co/mwhanna/qwen3-4b-transcoders) from the Anthropic Fellows. Importantly, Qwen3 4B is a "reasoning"/"thinking" model, so it should be interesting to see how the internal reasoning of the model compares to its "external" reasoning (visible chain of thought tokens).
 
-To use it, simply click "+ New Graph", but be sure to click the dropdown for the model, and select "Qwen3-4B". Here's an [example Qwen3 4B graph](https://www.neuronpedia.org/qwen3-4b/graph?slug=qwenname&pruningThreshold=0.73&densityThreshold=0.99).
+To use it, simply click "+ New Graph", but be sure to click the dropdown for the model, and select "Qwen3-4B". Here's an [example Qwen3 4B graph](https://www.neuronpedia.org/qwen3-4b/graph?slug=qwen-name&pruningThreshold=0.73&densityThreshold=0.99).
 
 **Important Usage Notes & Limitations**
 
